<?xml version="1.0"?>
<package format="3">
  <name>code_coverage</name>
  <version>0.4.4</version>
  <description>CMake configuration to run coverage</description>
  <author email="mike@vanadiumlabs.com">Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/mikeferguson/code_coverage</url>
  <url type="bugtracker">https://github.com/mikeferguson/code_coverage/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend>lcov</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-coverage</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-coverage</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-magic</depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
